# octowhere

./: .gitignore  Cargo.toml  LICENSE  rust-toolchain.toml
.cargo/: config.toml
assets/: MarathonShapiro-Wide65-20.bdf  MarathonShapiro-Wide65-32.bdf  a.out  marathon_shapiro_20.c  marathon_shapiro_20.u8g2  marathon_shapiro_32.c  marathon_shapiro_32.u8g2  u8g2_font_to_bytes.cpp
assets/PPFraktion-Free for personal use v1.1/Mono/: PPFraktionMono-Regular-20.bdf  PPFraktionMono-Regular-24.bdf  PPFraktionMono-Regular-28.bdf  a.out  ppfraktionmono_regular_20.c  ppfraktionmono_regular_20.u8g2  ppfraktionmono_regular_24.c  ppfraktionmono_regular_24.u8g2  ppfraktionmono_regular_28.c  ppfraktionmono_regular_28.u8g2  to_u8g2.cpp
src/: board.rs  chrome.rs  color.rs  lib.rs  main.rs  util.rs
src/drivers/: co5300.rs  framebuffer.rs  mod.rs  qspi_bus.rs
src/peripherals/: i2c_helper.rs  imu.rs  mod.rs  power.rs  rtc.rs  touch.rs
src/ui/: dirty.rs
