cargo-features = ["panic-immediate-abort"]

[package]
name = "octowhere"
version = "0.1.0"
edition = "2024"

[dependencies]
esp-hal = { version = "1.1.0", default-features = true, features = ["esp32s3", "requires-unstable", "unstable"] }
esp-rtos = { version = "0.3.0", features = ["esp32s3", "embassy", "esp-alloc"] }
esp-alloc = { version = "0.10.0", features = ["nightly"] }
esp-println = { version = "0.17.0", features = ["esp32s3", "log-04"] }
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.5", features = ["esp32s3"] }
log = "0.4"

# Allows for truly statically allocated tasks instead of a bump allocator
embassy-executor = { version = "0.10.0", features = ["nightly"] }
embassy-time = "0.5.1"
embassy-sync = "0.8"
embassy-futures = "0.1"
static_cell = { version = "2.1", features = ["nightly"] }

embedded-graphics = { version = "0.8", features = [] }
embedded-graphics-core = "0.4"

embedded-hal = "1.0"
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-hal-async = "1.0.0"

embedded-sdmmc = "0.9"
embedded-io-async = "0.7"
futures = { version = "0.3.32", default-features = false, features = ["async-await"] }
embassy-embedded-hal = "0.6.0"
ph-qmi8658 = { version = "0.1.1", features = ["fixed"] }
tca9554 = { version = "0.1.1" }
heapless = { version = "0.9.2", features = ["nightly"] }
u8g2-fonts = { version = "0.7.2", features = ["embedded_graphics_textstyle"] }
fontdue = { version = "0.9.3", default-features = false, features = ["hashbrown"] }
fontdue-macros = "0.9.3"

[patch.crates-io]
esp-hal = { git = "https://github.com/CordlessCoder/esp-hal" }
esp-rtos = { git = "https://github.com/CordlessCoder/esp-hal" }
esp-rom-sys = { git = "https://github.com/CordlessCoder/esp-hal" }
esp-alloc = { git = "https://github.com/CordlessCoder/esp-hal" }
esp-bootloader-esp-idf = { git = "https://github.com/CordlessCoder/esp-hal" }
esp-println = { git = "https://github.com/CordlessCoder/esp-hal" } 
esp-backtrace = { git = "https://github.com/CordlessCoder/esp-hal" } 
tca9554 = { git = "https://github.com/CordlessCoder/tca9554-rs" } 
fontdue = { git = "https://github.com/CordlessCoder/fontdue" } 
fontdue-macros = { git = "https://github.com/CordlessCoder/fontdue" } 
u8g2-fonts = { git = "https://github.com/CordlessCoder/u8g2-fonts" }

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true
